--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Meine OpenShift App</title>
 </head>
 <body>
-  <h1>Hallo von OpenShift!</h1>
+  <h1>Hallo von OpenShiiiiiiiiift!</h1>
   <p>Dies ist eine einfache HTML-Seite, bereitgestellt über einen Container auf Port 8080.</p>
 </body>
 </html>
